--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
   <!-- ==== 2) Tu contenedor semitransparente con formulario/tabla ==== -->
   <div class="contenedor-central">
-    <h1>Control de Presencia Fines de Semana</h1>
+    <h1>Generar Crono De Lideres</h1>
 
     {% if error %}
       <div class="alerta-error">{{ error }}</div>
